# clean-architecture-playground

./: .envrc.sample  .gitignore  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflow/: ci.yml
.github/workflows/: ci.yml
.sqlx/: query-7005d9d806de93d974c3acc03e73ea968a6428d863a68ffc959a8bf4f0df591b.json  query-d5b60f938abf576408b3917658a68ff12edc85cce900b94b2ce430527c6481a6.json
client/: Cargo.toml
client/src/: grpc.rs  lib.rs  rest.rs
client/src/graphql/: mutation.rs  queries.graphql  query.rs  schema.graphql
domain/: Cargo.toml
domain/src/: error.rs  lib.rs
domain/src/entity/: todo.rs
domain/src/repository/: todo_repository.rs
graphql-server/: Cargo.toml
graphql-server/src/: dependency_injection.rs
gui-client/: package.json
gui-client/src/: App.tsx
gui-client/src-tauri/: Cargo.toml  tauri.conf.json
gui-client/src-tauri/src/: main.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs  todo_repository.rs
migrations/: 20230805025536_add_todo_table.sql
presentation/: Cargo.toml  build.rs
presentation/proto/: todo.proto
presentation/src/: error.rs  graphql.rs  handler.rs  lib.rs
presentation/src/graphql/: handler.rs  mod.rs  object.rs  schema.rs
presentation/src/grpc/: mod.rs  proto_impl.rs
presentation/src/grpc/proto/: todo.proto
presentation/src/rest/: handler.rs  object.rs
server/: Cargo.toml
server/src/: dependency_injection.rs
use_case/: Cargo.toml
use_case/src/: error.rs  lib.rs
use_case/src/dto/: todo.rs
use_case/src/interactor/: todo.rs
use_case/src/traits/: todo.rs
