[workspace]
members = [
  "domain",
  "use_case",
  "infrastructure",
  "presentation",
  "server",
  "client",
]
# Only check / build main crates by default (check all with `--workspace`)
default-members = [
  "domain",
  "use_case",
  "infrastructure",
  "presentation",
  "server",
  "client",
]
# Example has been deleted, but README.md remains
exclude = []
resolver = "2"
