[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "6.0.1"
async-graphql-axum = "6.0.1"
axum = "0.6.20"
domain = { version = "0.1.0", path = "../domain" }
hyper = "0.14.27"
serde = { version = "1.0.185", features = ["derive"] }
tokio = { version = "1.29.1", features = ["full"] }
use_case = { version = "0.1.0", path = "../use_case" }
